# gifsicle

./: .appveyor.yml  .gdbinit  .gitignore  .travis.yml  COPYING  INSTALL  Makefile.am  Makefile.in  Makefile.w32  NEWS  NEWS.md  README  README.md  README.win  acconfig.h  configure  configure.ac  configure.in  dmalloc.c  gifdiff.1  gifdiff.c  gifdiff.man  gifsicle.1  gifsicle.c  gifsicle.h  gifsicle.man  gifsicle.min  gifsicle.spec  gifview.1  gifview.c  gifview.man  gifview.min  merge.c  mm.c  mm.h  newfile.com  optimize.c  parsergb.c  parsergb.h  quantize.c  (+5 more)
.github/workflows/: tests.yml
include/lcdf/: clp.h  inttypes.h
include/lcdfgif/: gif.h  gifx.h
ppm/: libppm.h  libppm2.c  libppm4.c  libppm5.c  ppmcmap.h  ppmquant.c
src/: .gitignore  Makefile.am  Makefile.bcc  Makefile.mingw  Makefile.w32  acconfig.h  clp.c  dmalloc.c  dmalloc.h  fmalloc.c  gifdiff.c  giffunc.c  gifread.c  gifsicle.c  gifsicle.h  giftoc.c  gifunopt.c  gifview.c  gifwrite.c  gifx.c  kcolor.c  kcolor.h  merge.c  optimize.c  opttemplate.c  quantize.c  strerror.c  support.c  ungifwrt.c  win32cfg.h  xform.c
test/: 001-transexpand.testie  002-cropresize.testie  003-bgopt.testie  004-careful.testie  005-resize.testie  006-unoptdisposal.testie  007-alltransp.testie  008-resizemix.testie  009-zerowidth.testie  010-warnings.testie  011-resizemix.testie  012-framechange.testie  testie
